--- a/style.css
+++ b/style.css
@@ -8,9 +8,13 @@
     --color--principal-100: #673de6;
     --color--principal-200: #2f1c6a;
     --color--principal-300: #1f1346;
+    --color--principal-500: #f4f5ff;
+    --color--principal-600: #2f1c78;
+    --color-principal-700: #dbe3ff;
     --color--neutral-100:#1d1e20;
     --color-neutral-200: #1a1919;
     --color--neutral-300: #e2dbfc;
+    
 }
 
 *{
@@ -18,6 +22,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+html, body{
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+    margin-top: 20px;
 }
 
 /* HEADER */
@@ -27,36 +39,39 @@ body {
   margin-top: 15px;
 }
 
-.navbar{
+.main-header {
     display: flex;
-    justify-content: row;
+    justify-content: space-between;
     align-items: center;
-    padding: 20px 30px;
-    background-color: var(--color--principal-0);
+    padding: 15px 30px;
+    background-color: white;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     z-index: 1000;
-    transition: background-color 0.3s ease, box-shadow 0.3s ease;
 }
-
-.navbar.scroll {
-  box-shadow: 0 2px 8px var(--color-neutral-200);
-}
-
 
 .nav-left{
     display: flex;
     align-items: center;
-    margin: 10px 10px;
+    margin: 10px 10px; 
+    flex-direction: row;
+    width: 100%;
 }
 
-.logo {
+.navbar {
+  display: flex;
+  justify-content:flex-start;
+  align-items: center;
+  width: 100%;
+}
+
+.logo-hostinger {
     height: 30px;
     width: 147px;
     margin-right: 40px;
-}
+} 
 
 .nav-center{
     display: flex;
@@ -121,22 +136,27 @@ body {
     font-size: 16px;
 }
 
-/* HERO */
-*{
-    font-family: "DM Sans", sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+.btn-menu {
+  display: none;
+  background: none;
+  border: none;
+  font-size: 1.8rem;
+  color: var(--color--principal-1);
+  cursor: pointer;
 }
+
+/* HERO */
 
 .hero{
     background-color: var(--color--principal-0);
     display: flex;
     flex-direction: row;
     justify-content: center;
-    height: 650px;
-    width: 100vw;
-    padding: 50px;
+    height: auto;
+    width: 100%;
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 0 20px 40px 20px;
     overflow: hidden;
     margin-top: -100px;
 }
@@ -290,8 +310,12 @@ body {
     background-color: var(--color--principal-300);display: flex;
     flex-direction: row;
     justify-content: center;
-    width: 100vw;
+    width: 100%;
+    max-width: 1440px;
     height: 650px;
+    margin: 0 auto;
+    padding: 0 20px;
+    box-sizing: border-box;
 }
 
 .section__content{
@@ -305,7 +329,7 @@ body {
 .section-superior{
     margin: 0px 36px 48px;
     padding: 0px 40px;
-    min-width: 1250px;
+    min-width: 1200px;
     margin-bottom: 45px;
 }
 
@@ -354,11 +378,11 @@ body {
 .card-container{
     display: flex;
     flex-direction: row;
-    justify-content: center; /* centra los cards */
+    justify-content: center; 
     margin-bottom: 35px;
     gap: 24px;
     width: 100%;
-    max-width: 1250px; /* ancho máximo del contenedor */
+    max-width: 1250px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -391,3 +415,318 @@ body {
     border-radius: 7px;
 }
 
+/* FOOTER */
+
+.footer-content{
+    background-color: var(--color--principal-500);
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 1440px;
+    height: auto;
+    margin: 0 auto;  
+    padding: 40px 20px;
+    flex: 1;
+    box-sizing: border-box;
+}
+
+.box-top{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    align-items: center;
+    gap: 15px;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 15px 0;
+}
+
+.logo {
+    height: auto;
+    width: auto;
+}
+
+.redes{
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+}
+
+.bi3{
+    color: var(--color--principal-600);
+    font-size: 25px;
+}
+
+.box-center{
+    display: flex;
+    flex-direction: row;
+    flex: 1;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 15px 0;
+}
+
+.box-cards{
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+}
+
+
+.cards-img{
+    height: 40px;
+    width: 60px;
+    border: 1px solid var(--color-principal-700);
+    border-radius: 6px;
+}
+
+.box-cards a{
+    align-self: center;
+    color: var(--color--principal-100);
+    text-decoration: none;
+    cursor: pointer;
+    font-weight: 700;
+    display: inline-block;
+}
+
+.box-policies{
+    display: flex;
+    flex-direction: row;
+    gap: 16px;
+}
+
+.box-policies a{
+    font-size: 14px;
+    text-decoration: none;
+    color: var(--color--principal-600);
+    cursor: pointer;
+    display: inline-block;
+    align-self: center;
+}
+
+.box-bottom{
+    display: flex;
+    flex-direction: row;
+    flex: 1;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 1200px;
+    border-top: 1px solid var(--color-principal-700);
+    margin: 0 auto;
+    padding: 15px 0;
+}
+
+.box-bottom p{
+    color: var(--color--principal-600);
+    font-size: 14px;
+}
+
+/* RESPONSIVE */
+/* HEADER */
+
+@media screen and (max-width: 1024px) {
+    .main-header{
+        height: auto;
+        padding: 10px;
+    }
+    .nav-menu{
+        display: none
+    }
+    .nav-right{
+        display:none;
+    }
+    .logo-hostinger{
+        margin: 0;
+        padding: 0px;
+    }
+    .btn-menu{
+        display: block;
+    }
+    .hero {
+        flex-direction: column;
+        padding: 62px 0 80px;
+        width: 100%;
+    }
+    .hero-content {
+        flex-direction: column;
+        padding: 0 40px;
+    }
+    .hero-left {
+        align-items:flex-start;
+        text-align: left;
+        justify-content: flex-start;
+        width: 75%;
+    }
+    .hero-title h1 {
+        font-size: 28px;
+        line-height: 20px;
+        word-spacing: 0px;
+        letter-spacing: 0px;
+    }
+    .title-features {
+        font-size: 18px;
+        line-height: 24px;
+    }
+    .hero-features {
+        font-size: 16px;
+        justify-content: flex-start;
+        align-items: flex-start;
+        text-align: left;
+    }
+    .feature-list {
+        align-items: center;
+        justify-content: center;
+    }
+    .list-check {
+        justify-content: flex-start;
+    }
+    .hero-cta {
+        flex-direction: row;
+        align-items: center;
+        width: 55%;
+    }
+    .cta-button {
+        padding: 12px 48px;
+    }
+    .timer {
+        flex-direction: column;
+        padding: 12px 30px;
+        font-size: 14px;
+    }
+    .hero-right{
+        width: 70%;
+    }
+    .hero-right img {
+        width: 100%;
+        height: auto;
+    }
+    .price-total {
+        font-size: 36px;
+    }
+    .hero-month {
+        font-size: 18px;
+    }
+    .section{
+        width: 100%;
+        padding: 62px 0 80px;
+    }
+    .section-superior{
+        margin: 0px 128px 40px;
+        padding: 0px 40px;
+        width: 40%;
+    }
+    .title-primary{
+        font-size: 28px;
+    }
+
+}
+
+
+@media screen and (max-width: 768px) {
+  .hero {
+    flex-direction: column;
+    padding: 20px 10px;
+  }
+
+  .hero-content {
+    flex-direction: column;
+    padding: 20px 0;
+    gap: 30px;
+  }
+
+  .hero-left {
+    align-items: center;
+    text-align: center;
+  }
+
+  .hero-title h1 {
+    font-size: 28px;
+    line-height: 34px;
+  }
+
+  .title-features {
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  .hero-features {
+    font-size: 14px;
+    margin-top: 10px;
+  }
+
+  .feature-list {
+    align-items: center;
+    justify-content: center;
+  }
+
+  .list-check {
+    justify-content: center;
+  }
+
+  .hero-cta {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+
+  .cta-button {
+    width: 100%;
+    padding: 12px 0;
+  }
+
+  .timer {
+    flex-direction: column;
+    padding: 10px;
+    font-size: 14px;
+  }
+
+  .hero-right img {
+    width: 100%;
+    height: auto;
+  }
+
+  .price-total {
+    font-size: 36px;
+  }
+
+  .hero-month {
+    font-size: 18px;
+  }
+}
+
+
+@media screen and (max-width: 480px) {
+  .hero-title h1 {
+    font-size: 24px;
+    line-height: 30px;
+  }
+
+  .title-features {
+    font-size: 14px;
+  }
+
+  .hero-price {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .price-ar {
+    font-size: 16px;
+  }
+
+  .price-total {
+    font-size: 30px;
+  }
+
+  .cta-button {
+    font-size: 14px;
+    padding: 10px;
+  }
+
+  .timer {
+    font-size:13px;
+  }
+}
